# OpRunway

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
bridge/route_b/: README.md  run_derisk.sh
canon/: 00-overview.md  _compile-state.json  _verify.json
canon/architecture/: acceptance-contract-evidence-chain.md  ascendoptest-precision-thresholds.md  ascendoptest-provides-no-golden-source.md  cannbot-ops-registry-invoke-workflow.md  cannbot-orchestration-and-cross-cli.md  case-generation-follows-opbase-section-1.md  catlass-acceptance-mechanics.md  catlass-synthetic-demo-cannot-forge-pass.md  catlass-to-aclnn-bridge.md  claude-code-plugin-agent-discovery.md  cross-cli-unified-form-agents-md.md  (+26 more)
doc/: oprunway-acceptance-evidence.md  oprunway-agent-system-design.md  oprunway-ascendoptest-probe.md  oprunway-batch6b-design.md  oprunway-cannbot-catlass-reuse.md  oprunway-cases50-design.md  oprunway-changes-brief.md  oprunway-codex-review.md  oprunway-design.md  oprunway-golden-decoupling-adr.md  oprunway-handoff-2026-07-13.md  oprunway-op-shape-taxonomy.md  oprunway-plugin-op-decoupling-design.md  oprunway-rule-catalog-critique.md  oprunway-spec-pr-analysis.md  oprunway-spec-schema.md  oprunway-task-pr-map.md  oprunway-task1-cases-critique.md  oprunway-todo-plans.md  oprunway-todo.md  oprunway-torch-baseline-design.md  oprunway-u7-generalization-design.md  oprunway-usertest-findings-design.md  oprunway-weekly-progress.md  oprunway-workflow-design.md
plugin/: AGENTS.md  README.md  init.sh
plugin/bridge/route_b/aclnn_op/: CMakeLists.txt
(+181 files in other folders)
